# tinylm-demo

./: .gitignore  .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: coverage.yml  python-ci-ziz.yml  python-ci.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_ff66d66464e49ca5___init___py.html
hypothesis/tests/: test_custom_strategies.py  test_markov_table_properties.py  test_shrinking_demo.py
src/tinylm/: __init__.py
tests/: conftest.py  test_custom_strategies.py  test_fixtures.py  test_markov_table_properties.py  test_shrinking_demo.py  test_strategy_generation.py
tests/hypothesis/: test_markov_table_properties.py  test_shrinking_demo.py  test_strategy_generation.py
tests/integration/: conftest.py  test_integration_overrides.py  test_markov.py
tests/unit/: conftest.py  test_markov.py  test_unit_overrides.py
