[project]
name = "tinylm"
version = "0.1.0"
description = "Tiny project used to demonstrate Hypothesis property-based testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.141.1",
    "prek>=0.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-ty>=0.1.4",
    "ruff>=0.14.14",
    "zizmor>=1.16.3",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--doctest-glob=*.md", "-v", "--ty"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
relative_files = true
